Changed hompage title in Pages/Index.html

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -11,24 +11,11 @@
 </video>
 <div class="jumbotron" style="background:rgba(72,74,71,.45); background-size:300px 400px; border-radius: 25px">
     <div class="lead">
-        <p style="font-size:24px"> Welcome to Lets Go SEA, the one-stop site to explore the beautiful neighborhoods of Seattle!</p>
         <div style="text-align:justify">
-            <p>
-                LetsGoSea serves to provide the current and future Seattleites with a digital platform to connect to the heart of their community,
-                to explore the surrounding neighborhoods, and to make better decisions about where and how they will live, work, and spread their leisure time in the Emerald City.
-            </p>
-            <p>
-                Simply click on a neighborhood card to lift its mysterious veil.
-                Inside each card, you will see more pictures of the neighborhood, an overall happiness rating, and a crime index.
-                You can zoom in and out of the map to locate the areas’ most popular eateries, parks, and tourist attractions.
-                To get a more balanced view, you can also check out the analytics and visualizations we have prepared for you about various local issues,
-                including cost of living, real estate metrics, crime statistics, and more.
-            </p>
-            <p>
-                Have something to say? Feel free to rate and comment on your experience about a particular neighborhood. 
-                You may share your likes, dislikes, observations, discoveries, concerns...anything you want!
-                Are you ready to explore?
-            </p>
+            <h1>Lets Go SEA</h1>  
+        </div>
+        <div>
+            <h1>The One Stop Site to explore the beautiful neighborhoods of Seattle</h1>
         </div>
        
     </div>
