--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -8,18 +8,19 @@
 <video autoplay muted loop preload="auto" id="myVideo">
     <source src="~/image/LetsGoSEA_Homepage.mov" type="video/mp4" />
 </video>
-<div class="jumbotron" style="background:rgba(72,74,71,.45); background-size:300px 400px; border-radius: 25px">
-    <div class="lead">
-        <div style="text-align:justify">
-            <h1>Lets Go SEA</h1>  
-        </div>
-        <div>
+<div class="jumbotron" style="background-color: transparent;">
+    <div class="lead" style="background-color: transparent;"></div>
+    <div style="text-align: justify; background:rgba(143, 201, 58, 0.4); background-size: 150px 400px; border-radius: 25px">
+        <h1 style="font: 600">Lets Go SEA</h1>
+    </div>
+    <div>
+        <div style="text-align: justify; background: rgba(143, 201, 58, 0.4); background-size: 300px 150px; border-radius: 25px">
             <h1>The One Stop Site to explore the beautiful neighborhoods of Seattle</h1>
         </div>
-       
+        <a class="btn btn-primary btn-xl" role="button" asp-controller="Neighborhoods" asp-action="Index">Lets Go Sea!</a>
     </div>
-    <hr class="my-4" border-0/>
-    <a class="btn btn-primary btn-xl" role="button" asp-controller="Neighborhoods" asp-action="Index">Lets Go Sea!</a>
+</div>
+
 
 </div>
 
