--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -18,27 +18,25 @@
 
 
     .home-title {
-        position: absolute;
-        top: 100px;
-        right: 1050px;
+        position: fixed;
+        top: 15%;
+        right: 60%;
         text-align: center;
         background: rgba(143, 201, 58, 0.4);
-        background-size: 150px 400px;
         border-radius: 25px;
     }
 
     .home-tagline {
         overflow-wrap: break-word;
-        position: absolute;
-        top: 450px;
-        bottom: 275px;
-        left: 1000px;
-        right: 150px;
+        position: fixed;
+        width:35%;
+        height:10%;
+        top:58%;
+        right:12%;
         text-align: justify;
         background: rgba(143, 201, 58, 0.4);
-        background-size: 300px 500px;
         border-radius: 25px;
-        padding: 25px 15px 25px 15px;
+        padding: .5% 1.7% .5% 1.7%;
     }
 </style>
 
@@ -48,10 +46,10 @@
 </video>
 
 <div class="home-title">
-        <h1 style="font-size: 100px; padding: 50px 10px 50px 10px;">Lets Go SEA</h1>
+        <h1 style="font-size: 600%; padding: 1% 1.5% 1% 1.5%;">Lets Go SEA</h1>
 </div>
 <div class="home-tagline">
-    <p1 style="font-family: 'Montserrat', sans-serif; font-size:30px; font-weight:100">"The one-stop site to explore the beautiful neighborhoods of Seattle!"</p1>
+    <p1 style="font-family: 'Montserrat', sans-serif; font-size:120%; font-weight:100">"The one-stop site to explore the beautiful neighborhoods of Seattle!"</p1>
 </div>
 <div>
     <a class="btn btn-primary btn-xl" role="button" asp-controller="Neighborhoods" asp-action="Index">Lets Go Sea!</a>
