Updated title in Explore.cshtml

--- a/src/Views/Neighborhoods/Explore.cshtml
+++ b/src/Views/Neighborhoods/Explore.cshtml
@@ -2,7 +2,7 @@
 @inject NeighborhoodService _neighborhoodService
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Explore";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
