Updated <a> tag asp-page links in _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-navbar border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index">LetsGoSEA</a>
+            <a class="navbar-brand" asp-area="" asp-page="/">LetsGoSEA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                     </li>
                     <!-- Neighborhood Index Link-->
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Neighborhood">Neighborhood Index</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Neighborhood/Index">Neighborhood Index</a>
                     </li>
                     <!-- About Us Link-->
                     <li class="nav-item">
