Updated <a> tag asp-page in Index.cshtml

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -52,7 +52,7 @@
     <p1 style="font-family: 'Montserrat', sans-serif; font-size:120%; font-weight:100">"The one-stop site to explore the beautiful neighborhoods of Seattle!"</p1>
 </div>
 <div>
-    <a class="btn btn-primary btn-xl" role="button" asp-page="Index">Lets Go Sea!</a>
+    <a class="btn btn-primary btn-xl" role="button" asp-page="/Explore/Index">Lets Go Sea!</a>
 </div>
 
 <script src="_framework/blazor.server.js"></script>
