--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -5,3 +5,17 @@
     ViewData["Title"] = "Read Page";
     Layout = "Shared/_Layout";
 }
+
+<h1>Read</h1>
+
+<div class="content">
+    <h5 class="title" id="productTitle">@Model.Neighborhood.Name</h5>
+
+    <img class="card-img" src='@Model.Neighborhood.Image' alt='Image for @Model.Neighborhood.Name'>
+
+    <p class="card-text">@Model.Neighborhood.ShortDesc</p>
+
+</div>
+
+<br />
+<br />
