--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -19,3 +19,8 @@
 
 <br />
 <br />
+
+<div class="row">
+    <a asp-page="Update" asp-route-id="@Model.Neighborhood.Id" class="btn btn-primary">Update</a> &nbsp; &nbsp;
+    <a asp-page="Delete" asp-route-id="@Model.Neighborhood.Id" class="btn btn-danger">Delete</a>
+</div>
