Added anchor link to the Delete word in Index.cshtml

--- a/src/Pages/Neighborhood/Index.cshtml
+++ b/src/Pages/Neighborhood/Index.cshtml
@@ -26,7 +26,7 @@
                 <td>
                     <a asp-page="Read" asp-route-id="@neighborhood.Id">Read</a> |
                     Update<!-- TODO: Add Update--> |
-                     Delete<!-- TODO: Add Delete-->
+                    <a asp-page="Delete" asp-route-id="@neighborhood.Id">Delete</a>
                 </td>
             </tr>
         }
