Added comment in AboutUs.cshtml

--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.AboutUs
 
+<!-- About Us page to show: contains our mission statement, website information, and team member information -->
 @{
     ViewData["Title"] = "About us";
     Layout = "Shared/_Layout";
