Updated comment in Error.cshtml

--- a/src/Pages/Error.cshtml
+++ b/src/Pages/Error.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ErrorModel
+
+<!-- Error page to show, contains error messages to render if request cannot be completed-->
 @{
     ViewData["Title"] = "Error";
 }
-
-<!-- Error.cshtml, contains error messages to render if request cannot be completed-->
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
