Updated comment in Privacy.cshtml

--- a/src/Pages/Privacy.cshtml
+++ b/src/Pages/Privacy.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model PrivacyModel
+
+<!-- Privacy page to show -->
 @{
     ViewData["Title"] = "Privacy Policy";
 }
 
-<!-- Privacy.cshtml -->
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
