--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.Explore.Index
 
+<!--Explore homepage: shows all the neighborhoods in card format-->
 @{
     ViewData["Title"] = "Explore";
     Layout = "Shared/_Layout";
