--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model IndexModel
+
+<!--Index page (homepage) of 'Lets Go SEA' !-->
 @{
     ViewData["Title"] = "Home page";
 }
@@ -40,7 +42,6 @@
     }
 </style>
 
-<!--Index page of 'Lets Go SEA' !-->
 <video autoplay muted loop preload="auto" id="myVideo">
     <source src="~/image/LetsGoSEA_Homepage.mov" type="video/mp4" />
 </video>
