Added comment to Create.cshtml

--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -3,6 +3,7 @@
 @inject NeighborhoodService NeighborhoodService
 @model LetsGoSEA.WebSite.Pages.Neighborhood.CreateModel
 
+<!--CRUDI: Create page to show: will redirect to Update Page-->
 @{
     ViewData["Title"] = "Create page";
 }
