Added comment to Delete.cshtml

--- a/src/Pages/Neighborhood/Delete.cshtml
+++ b/src/Pages/Neighborhood/Delete.cshtml
@@ -3,6 +3,7 @@
 @inject NeighborhoodService NeighborhoodService
 @model LetsGoSEA.WebSite.Pages.Neighborhood.Delete
 
+<!--CRUDI: Delete page to show: contains some data of the selected neighborhood and a button to confirm Delete-->
 @{
     ViewData["Title"] = "Delete page";
 }
