Added comment to Index.cshtml

--- a/src/Pages/Neighborhood/Index.cshtml
+++ b/src/Pages/Neighborhood/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.Neighborhood.Index
 
+<!--CRUDI: Index page to show: contains a list of neighborhoods and links to Create, Read, Update, and Delete-->
 @{
     ViewData["Title"] = "Index Page";
     Layout = "Shared/_Layout";
