Update model name in Update.cshtml

--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LetsGoSEA.WebSite.Pages.Neighborhood.Update
+@model LetsGoSEA.WebSite.Pages.Neighborhood.UpdateModel
 
 @{
     Layout = null;
