--- a/src/Pages/Neighborhood/Delete.cshtml
+++ b/src/Pages/Neighborhood/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}"
 @using LetsGoSEA.WebSite.Services
 @inject NeighborhoodService NeighborhoodService
-@model LetsGoSEA.WebSite.Pages.Neighborhood.Delete
+@model LetsGoSEA.WebSite.Pages.Neighborhood.DeleteModel
 
 <!--CRUDI: Delete page to show: contains some data of the selected neighborhood and a button to confirm Delete-->
 @{
