Update model name in Index.cshtml

--- a/src/Pages/Neighborhood/Index.cshtml
+++ b/src/Pages/Neighborhood/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LetsGoSEA.WebSite.Pages.Neighborhood.Index
+@model LetsGoSEA.WebSite.Pages.Neighborhood.IndexModel
 
 <!--CRUDI: Index page to show: contains a list of neighborhoods and links to Create, Read, Update, and Delete-->
 @{
