Update model name in Read.cshtml

--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -1,9 +1,9 @@
 ﻿@page
-@model LetsGoSEA.WebSite.Pages.Neighborhood.Read
+@model LetsGoSEA.WebSite.Pages.Neighborhood.ReadModel
 
-<!--CRUDI: Read page to show: contains data of the selected neighborhood-->
+<!--CRUDI: ReadModel page to show: contains data of the selected neighborhood-->
 @{
-    ViewData["Title"] = "Read Page";
+    ViewData["Title"] = "ReadModel Page";
     Layout = "Shared/_Layout";
 }
 
