Added Layout and title of update page to Update.cshtml

--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.Neighborhood.UpdateModel
 
+<!--CRUDI: Update page to show: Form for updating neighborhood-->
+
 @{
     Layout = null;
 }
