--- a/src/Pages/Neighborhood/Index.cshtml
+++ b/src/Pages/Neighborhood/Index.cshtml
@@ -26,7 +26,7 @@
                 <td>@neighborhood.Name</td>
                 <td>
                     <a asp-page="Read" asp-route-id="@neighborhood.Id">Read</a> |
-                    Update<!-- TODO: Add Update--> |
+                    <a asp-page="Update" asp-route-id="@neighborhood.Id">Update</a> |
                     <a asp-page="Delete" asp-route-id="@neighborhood.Id">Delete</a>
                 </td>
             </tr>
