Refactored model name in AboutUs.cshtml

--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LetsGoSEA.WebSite.Pages.AboutUs
+@model LetsGoSEA.WebSite.Pages.AboutUsModel
 
 <!-- About Us page to show: contains our mission statement, website information, and team member information -->
 @{
