Updated model name in Index.cshtml

--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LetsGoSEA.WebSite.Pages.Explore.Index
+@model LetsGoSEA.WebSite.Pages.Explore.IndexModel
 
 <!--Explore homepage: shows all the neighborhoods in card format-->
 @{
