--- a/src/Pages/Neighborhood/Delete.cshtml
+++ b/src/Pages/Neighborhood/Delete.cshtml
@@ -15,31 +15,31 @@
 
         <div class="form-group">
             <label asp-for="Neighborhood.Name" class="control-label"></label>
-            <input asp-for="Neighborhood.Name" class="form-control" />
+            <input asp-for="Neighborhood.Name" class="form-control" readonly/>
             <span asp-validation-for="Neighborhood.Name" class="text-danger"></span>
         </div>
 
         <div class="form-group">
             <label asp-for="Neighborhood.Image" class="control-label"></label>
-            <input asp-for="Neighborhood.Image" class="form-control" />
+            <input asp-for="Neighborhood.Image" class="form-control" readonly/>
             <span asp-validation-for="Neighborhood.Image" class="text-danger"></span>
         </div>
 
         <div class="form-group">
             <label asp-for="Neighborhood.City" class="control-label"></label>
-            <input asp-for="Neighborhood.City" class="form-control" />
+            <input asp-for="Neighborhood.City" class="form-control" readonly/>
             <span asp-validation-for="Neighborhood.City" class="text-danger"></span>
         </div>
 
          <div class="form-group">
             <label asp-for="Neighborhood.State" class="control-label"></label>
-            <input asp-for="Neighborhood.State" class="form-control" />
+            <input asp-for="Neighborhood.State" class="form-control" readonly/>
             <span asp-validation-for="Neighborhood.State" class="text-danger"></span>
         </div>
 
          <div class="form-group">
             <label asp-for="Neighborhood.ShortDesc" class="control-label"></label>
-            <input asp-for="Neighborhood.ShortDesc" class="form-control" />
+            <input asp-for="Neighborhood.ShortDesc" class="form-control" readonly/>
             <span asp-validation-for="Neighborhood.ShortDesc" class="text-danger"></span>
         </div>
 
