--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @model LetsGoSEA.WebSite.Pages.Neighborhood.ReadModel
-
 <!--CRUDI: ReadModel page to show: contains data of the selected neighborhood-->
 @{
     ViewData["Title"] = "ReadModel Page";
@@ -9,17 +8,46 @@
 
 <h1>Read</h1>
 
-<div class="content">
-    <h5 class="title" id="neighborhoodTitle">@Model.Neighborhood.Name</h5>
-    @foreach (var neighborhoodImage in @Model.Neighborhood.Image.Split(','))
-    {
-        var neighborhoodImageURL = neighborhoodImage.Substring(0, neighborhoodImage.Length -1);
-        <p>@Model.Neighborhood.Image'</p>
-        <img class="card-img" src='@neighborhoodImage' alt='Image for @Model.Neighborhood.Name'>
-    }
+<!----->
 
-    <p class="card-text">@Model.Neighborhood.ShortDesc</p>
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    @{var neighborhoodImages = @Model.Neighborhood.Image.Split(',');}
 
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        @for (var i = 1; i < neighborhoodImages.Length; i++)
+        {
+            <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
+        }
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>@Model.Neighborhood.Name</h5>
+                <p>@Model.Neighborhood.ShortDesc</p>
+            </div>
+        </div>
+        @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
+        {
+            <div class="carousel-item">
+                <img src="@neighborhoodImage" class="d-block w-100" alt="...">
+                <div class="carousel-caption">
+                    <h5>@Model.Neighborhood.Name</h5>
+                    <p>@Model.Neighborhood.ShortDesc</p>
+                </div>
+            </div>
+        }
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
 <br />
