Updated title in Update.cshtml

--- a/src/Pages/Neighborhood/Update.cshtml
+++ b/src/Pages/Neighborhood/Update.cshtml
@@ -8,7 +8,7 @@
     ViewData["Title"] = "Update page";
 }
 
-<h1>Create/Update</h1>
+<h1>Update</h1>
 
 <div class="container">
     <form method="post">
