Added Contribute link to _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
 <footer class="border-top footer text-muted bg-footer">
     <div class="container">
         <p>
-            &copy; 2022 - The C Sharp Investigators - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - The C Sharp Investigators - <a asp-area="" asp-page="/Privacy">Privacy</a> <a href="https://github.com/nuri1126/TheCSharpInvestigators">Contribute</a>
         </p>
 
     </div>
