--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -13,8 +13,46 @@
         @Model.CurrentNeighborhood.Name
         <h1 class="display-4">@Model.CurrentNeighborhood.City, @Model.CurrentNeighborhood.State</h1>
     </h1>
-    <img src="@Model.CurrentNeighborhood.Image" class="img-fluid" alt="Responsive Image of @Model.CurrentNeighborhood.Name"/>
-    <hr class="my-4"/>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        @{var neighborhoodImages = @Model.CurrentNeighborhood.Image.Split(',');}
+
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            @for (var i = 1; i < neighborhoodImages.Length; i++)
+            {
+                <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
+            }
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>@Model.CurrentNeighborhood.Name</h5>
+                    <p>@Model.CurrentNeighborhood.ShortDesc</p>
+                </div>
+            </div>
+            @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
+            {
+                <div class="carousel-item">
+                    <img src="@neighborhoodImage" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h5>@Model.CurrentNeighborhood.Name</h5>
+                        <p>@Model.CurrentNeighborhood.ShortDesc</p>
+                    </div>
+                </div>
+            }
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <hr class="my-4" />
     <p>@Model.CurrentNeighborhood.ShortDesc</p>
 
 
