--- a/src/Pages/AboutUs.cshtml
+++ b/src/Pages/AboutUs.cshtml
@@ -16,22 +16,22 @@
     We are the CSI &ndash;&ndash; C Sharp Investigators &ndash;&ndash; a group of computer science student from Seattle University! <br />
     With the expanding city population, we decided to build this website to help Seattleites navigate, explore, and
     investigate our neighborhoods more easily.
-    For the computer nerds out there, we built this website using C# and ASP.NET and used the Tableau software to
-    generate our analytics and visuals. Feel free to connect with us on LinkedIn!
+    For the computer nerds out there, we built this website using C# and ASP.NET and various APIs to
+    gather our analytics and visuals. Feel free to connect with us on LinkedIn!
 </p>
 <div>
     <p style="font-size:20px; color: #84A98C; font-weight:bold; text-align:justify">
-        LetsGoSea serves to provide the current and future Seattleites with a digital platform to connect to the heart of their community,
-        to explore the surrounding neighborhoods, and to make better decisions about where and how they will live, work, and spread their leisure time in the Emerald City.
+        LetsGoSea provides current and future Seattleites with a digital platform to connect to the heart of their community,
+        to explore the surrounding neighborhoods, and to make better decisions about where and how they will live, work, and spend their leisure time in the Emerald City.
 
-        Simply click on a neighborhood card to lift its mysterious veil.
-        Inside each card, you will see more pictures of the neighborhood, an overall happiness rating, and a crime index.
+        Simply click on a neighborhood card to access content that illustrates the lifestyle in each
+        community -- with pictures of the neighborhood, an overall happiness rating, and a crime index.
         You can zoom in and out of the map to locate the areas’ most popular eateries, parks, and tourist attractions.
-        To get a more balanced view, you can also check out the analytics and visualizations we have prepared for you about various local issues,
+        To get an inside look on your neighborhood, you can also check out the analytics and visualizations we have prepared for you about various local issues,
         including cost of living, real estate metrics, crime statistics, and more.
 
         Have something to say? Feel free to rate and comment on your experience about a particular neighborhood.
-        You may share your likes, dislikes, observations, discoveries, concerns...anything you want!
+        You may share your likes, dislikes, observations,and concerns!
         Are you ready to explore?
     </p>
 </div>
