--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -55,7 +55,17 @@
     <hr class="my-4" />
     <p>@Model.CurrentNeighborhood.ShortDesc</p>
 
-
+    <!-- Google Maps for this neighborhood-->
+    <iframe
+      width="100%"
+      height="500"
+      style="border:0"
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://www.google.com/maps/embed/v1/place?key=@Model.GetKey()&q=@Model.CurrentNeighborhood.Name&zoom=15"
+      allowfullscreen>
+    </iframe>
+    
+    
     <!-- Show Walk Score, Transit Score, Bike Score if we have them.
     Otherwise, we don't show it
     -->
