--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -15,14 +15,16 @@
     </h1>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         @{var neighborhoodImages = @Model.CurrentNeighborhood.Image.Split(',');}
-
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            @for (var i = 1; i < neighborhoodImages.Length; i++)
-            {
-                <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
-            }
-        </ol>
+        @if (neighborhoodImages.Length != 1)
+        {
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                @for (var i = 1; i < neighborhoodImages.Length; i++)
+                {
+                    <li data-target="#carouselExampleCaptions" data-slide-to="@i"></li>
+                }
+            </ol>
+        }
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
@@ -31,26 +33,32 @@
                     <p>@Model.CurrentNeighborhood.ShortDesc</p>
                 </div>
             </div>
-            @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
+            @if (neighborhoodImages.Length != 1)
             {
-                <div class="carousel-item">
-                    <img src="@neighborhoodImage" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5>@Model.CurrentNeighborhood.Name</h5>
-                        <p>@Model.CurrentNeighborhood.ShortDesc</p>
+                @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
+                {
+                    <div class="carousel-item">
+                        <img src="@neighborhoodImage" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>@Model.CurrentNeighborhood.Name</h5>
+                            <p>@Model.CurrentNeighborhood.ShortDesc</p>
+                        </div>
                     </div>
-                </div>
+                }
             }
 
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        @if (neighborhoodImages.Length != 1)
+        {
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        }
     </div>
     <hr class="my-4" />
     <p>@Model.CurrentNeighborhood.ShortDesc</p>
